--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT=3000
-MONGO_URI=mongodb://localhost:27017/healthcenterdb
+PORT=3003
+MONGO_URI=mongodb://localhost:27017/healthcenter
+JWT_SECRET=abc123xyz789
