--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "node backend/server.js",
-    "dev": "nodemon backend/server.js",
-    "build": "cd frontend && npm install && ng build"
+    "client": "cd frontend && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "cd frontend && npm install && ng build",
+    "seed": "node backend/seed.js"
   },
   "keywords": [
     "mean",
@@ -25,10 +27,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "concurrently": "^7.6.0",
     "nodemon": "^2.0.22"
   }
 }
